[package]
name = "option-constructor-derive"
version = "0.1.1"
authors = ["iovxw <iovxw@outlook.com>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/iovxw/option-constructor-derive"
repository = "https://github.com/iovxw/option-constructor-derive"
documentation = "https://docs.rs/option-constructor-derive"
description = "Constructor helper"
keywords = ["constructor", "derive"]

[lib]
proc-macro = true

[dependencies]
syn = "^0.11"
quote = "^0.3"
